Bug 1247865 - Fix assertion to handle restyling of a table::after.  r=birtles

I confirmed locally that this patch does fix the assertion in the
crashtest.

MozReview-Commit-ID: L1TIAZZ1aNu